@@ -8,7 +8,9 @@ Daniel Patton
 Email: seven-nation@army.com
 
 Les Harris
-Email: lescom@comcast.net
+Email: me@lesharris.com
+Userid: lharris
 
 Mart Raudsepp
 Email: leio@gentoo.org
+
