@@ -1,3 +1,7 @@
+2008-06-17  Les Harris  <me@lesharris.com>
+    * src/mud-window.c, src/mud-connection-view.c, src/mud-connection-view.h:
+    Added in input history support for our text entry widget.
+
 2007-07-13  Jordi Mallach  <jordi@sindominio.net>
 
 	* configure.ac, Makefile.am: Prepare for icon changes.
